--- a/style.css
+++ b/style.css
@@ -58,8 +58,20 @@ a{
 }
 
 :root{
-	--primaryColor:#ee4a4a;
-	--secondaryColor:rgb(121, 129, 241);
-	--titleColor:#000;
-	--subtitleColor:#746e6e;
+--white: #FFFFFFff;
+--charcoal: #363949ff;
+--tropical-indigo: #7380ECff;
+--antiflash-white: #F6F6F9ff;
+--white-2: #FFFFFFff;
+--antiflash-white-2: #F0F0F4ff;
+--aquamarine: #41F1B6ff;
+--cadet-gray: #9BA8B7ff;
+--lavender-web: #E6E6F2ff;
+--light-red: #FF7782ff;
+--regularPadding:2rem;
+}
+
+body{
+	box-sizing: border-box;
+	font-family: "roboto" sans-serif;
 }
