--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ aside{
 .top{
 	position: relative;
 	top: 1rem;
-	height: 6rem;
+	height: 10vh;
 }
 .logo{
 	display: flex;
@@ -135,6 +135,6 @@ aside{
 }
 
 .sidebar{
-  height: 100%;
+  height: 80vh;
   background: var(--text-body-color);
 }
