--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 14px;
 	font: inherit;
 	vertical-align: baseline;
+	text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -47,102 +48,12 @@ table {
 	border-spacing: 0;
 }
 
-/* end of css reset */
+/* end css reset */
 
-
-.logo img{
-	width: 50px;
+aside .top .logo img{
+	width: 5%;
 }
 
 :root{
---white: #FFFFFFff;
-
---tropical-indigo: #7380ECff;
---antiflash-white: #e9ecef;
---white-2: #FFFFFFff;
---antiflash-white-2: #F0F0F4ff;
---aquamarine: #41F1B6ff;
---cadet-gray: #9BA8B7ff;
---lavender-web: #E6E6F2ff;
---light-red: #FF7782ff;
---card-border-radius:2rem;
---border-radius-1: 0.4rem;
---border-radius-2: 0.8rem;
---border-radius-3:1.2rem;
-
---title-color: #212529;
---text-body-color: #343a40;
-
---card-padding:1.8rem;
---regular-padding: 3rem;
---gap-column: 1rem;
-
---box-shadow:0 2rem 3rem rgba(132, 139, 200, 0.18);
+	
 }
-
-*{
-	text-decoration: none;
-	box-sizing: border-box;
-	text-transform: capitalize;
-}
-
-html{
-	font-size: 14px;
-}
-body{
-	font-family: 'Roboto', sans-serif;
-	width: 100vw;
-	height: 100vh;
-	font-size: 1.5rem;
-	background-color: var(--antiflash-white);
-}
-
-.container{
-	display: grid;
-	grid-template-columns: 1fr 4fr 1fr;
-}
-aside, .main, .rightSidebar{
-	border: 1px solid #363949ff;
-}
-
-aside{
-	height: 100vh;
-	position: relative;
-}
-.top{
-	position: relative;
-	top: 1rem;
-	height: 10vh;
-}
-.logo{
-	display: flex;
-	top: 50%;
-	position: absolute;
-	transform: translateY(-50%);
-	align-items: center;
-	gap: var(--gap-column);
-	width: 100%;
-	padding-left: var(--card-padding);
-}
-
-.logo h2{
-	color: var(--title-color);
-	font-weight: 800;
-}
-
-.logo h2 span{
-	color: var(--light-red);
-}
-
-.sidebar{
-  height: 80vh;
-  background: var(--text-body-color);
-  }
-  
-  .sidebar a{
-    display: flex;
-  }
-  
-  .sidebar a:lastchild{
-    margin-top: auto;
-  }
