--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ aside .top .logo{
 .data div{
 	flex: 1 1 100px;
 	height: 100%;
-	padding: 1rem;
+	padding: 2rem;
 }
 
 .data div svg{
@@ -221,38 +221,44 @@ aside .top .logo{
 .data .income svg{
 	background-color: #99c1b9;
 }
-#Sales circle{
-	stroke-width: 1rem;
-	stroke: var(--light-coral);
-	fill: none;
-	stroke-dasharray: 314.2;
-	stroke-dashoffset: 62.8;
-	
-}
-#expense circle{
-	stroke-width: 1rem;
-	stroke: var(--light-coral);
-	fill: none;
-	stroke-dasharray: 314.2;
-	stroke-dashoffset: 62.8;
-	
-}
-#income circle{
-	stroke-width: 1rem;
-	stroke: var(--light-coral);
-	fill: none;
-	stroke-dasharray: 200;
-	stroke-dashoffset: 65.6;
-	
-}
+
 
 .data h2{
 	font-size: 1rem;
 	font-weight: 700;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	margin: 1rem 0;
+	color: var(--outer-space);
+}
+
+.data h3{
+	font-size: 20px;
+	font-weight: 900;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color: var(--onyx);
 }
 /*end of card info */
+
+/* data table */
+table {
+	border:1px solid #b3adad;
+	border-collapse:collapse;
+	padding:5px;
+	width: 100%;
+}
+table th {
+	border:1px solid #b3adad;
+	padding:5px;
+	background: #f0f0f0;
+	color: #313030;
+}
+table td {
+	border:1px solid #b3adad;
+	text-align:center;
+	padding:5px;
+	background: #ffffff;
+	color: #313030;
+}
 
 
 /* sidebar kanan */
@@ -272,3 +278,5 @@ aside .top .logo{
 	}
 
 }
+
+/* https://nikitahl.github.io/svg-circle-progress-generator/ */
